--- a/face_recognition_Several_people.ipynb
+++ b/face_recognition_Several_people.ipynb
@@ -24,7 +24,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mUva5NADGfoC",
-        "outputId": "493442a0-41c2-4c06-ea12-7369624685d8"
+        "outputId": "7e24a5e6-150f-496f-cf96-ef879e1a949e"
       },
       "execution_count": 1,
       "outputs": [
@@ -32,17 +32,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting opencv-python==4.7.0.72\n",
-            "  Downloading opencv_python-4.7.0.72-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (18 kB)\n",
-            "Requirement already satisfied: numpy>=1.21.2 in /usr/local/lib/python3.11/dist-packages (from opencv-python==4.7.0.72) (1.26.4)\n",
-            "Downloading opencv_python-4.7.0.72-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (61.8 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m61.8/61.8 MB\u001b[0m \u001b[31m8.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: opencv-python\n",
-            "  Attempting uninstall: opencv-python\n",
-            "    Found existing installation: opencv-python 4.10.0.84\n",
-            "    Uninstalling opencv-python-4.10.0.84:\n",
-            "      Successfully uninstalled opencv-python-4.10.0.84\n",
-            "Successfully installed opencv-python-4.7.0.72\n"
+            "Requirement already satisfied: opencv-python==4.7.0.72 in /usr/local/lib/python3.11/dist-packages (4.7.0.72)\n",
+            "Requirement already satisfied: numpy>=1.21.2 in /usr/local/lib/python3.11/dist-packages (from opencv-python==4.7.0.72) (1.26.4)\n"
           ]
         }
       ]
@@ -72,7 +63,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_AC52iBm0jsG",
-        "outputId": "f42c8fd8-47a7-4a44-82a9-7bd364406b50"
+        "outputId": "50a414a2-1fde-4fd7-ca54-b186d39d94fe"
       },
       "execution_count": 3,
       "outputs": [
@@ -80,7 +71,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -140,15 +131,22 @@
       "source": [
         "# Load known images and extract features\n",
         "known_faces = {\n",
-        "    \"yazdaniyan\": \"/content/drive/MyDrive/Ai_Lab/data/Yazdanian/simple/51101028.JPG\",\n",
-        "    \"akhavan\": \"/content/drive/MyDrive/Ai_Lab/data/akhavan/simple/51251038.png\",\n",
-        "    # Add more known persons and their image paths here\n",
+        "    \"yazdaniyan\": [\n",
+        "        \"/content/drive/MyDrive/Ai_Lab/data/Yazdanian/simple/51101028.JPG\",\n",
+        "        \"/content/drive/MyDrive/Ai_Lab/data/Yazdanian/simple/51101028.JPG\",\n",
+        "        \"/content/drive/MyDrive/Ai_Lab/data/Yazdanian/simple/51101028.JPG\"\n",
+        "    ],\n",
+        "    \"akhavan\": [\n",
+        "        \"/content/drive/MyDrive/Ai_Lab/data/akhavan/simple/51251038.png\",\n",
+        "        \"/content/drive/MyDrive/Ai_Lab/data/akhavan/simple/51251038.png\",\n",
+        "        \"/content/drive/MyDrive/Ai_Lab/data/akhavan/simple/51251038.png\"\n",
+        "    ]\n",
         "}\n"
       ],
       "metadata": {
         "id": "MiumTYKGX_Yn"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -164,23 +162,29 @@
       "cell_type": "code",
       "source": [
         "known_features = {}\n",
-        "for name, image_path in known_faces.items():\n",
-        "    image = cv2.imread(image_path)\n",
-        "    imgWidth = int(image.shape[1])\n",
-        "    imgHeight = int(image.shape[0])\n",
-        "    detector.setInputSize((imgWidth, imgHeight))\n",
-        "    faces = detector.detect(image)\n",
-        "    assert faces[1] is not None, f'Cannot find a face in {image_path}'\n",
+        "for name, image_paths in known_faces.items():\n",
+        "    features = []\n",
+        "    for image_path in image_paths:\n",
+        "        image = cv2.imread(image_path)\n",
+        "        imgWidth = int(image.shape[1])\n",
+        "        imgHeight = int(image.shape[0])\n",
+        "        detector.setInputSize((imgWidth, imgHeight))\n",
+        "        faces = detector.detect(image)\n",
+        "        assert faces[1] is not None, f'Cannot find a face in {image_path}'\n",
         "\n",
-        "    # Align and extract features\n",
-        "    face_align = recognizer.alignCrop(image, faces[1][0])\n",
-        "    face_feature = recognizer.feature(face_align)\n",
-        "    known_features[name] = face_feature"
+        "        # Align and extract features\n",
+        "        face_align = recognizer.alignCrop(image, faces[1][0])\n",
+        "        face_feature = recognizer.feature(face_align)\n",
+        "        features.append(face_feature)\n",
+        "\n",
+        "    # Average the features for this person\n",
+        "    avg_feature = np.mean(features, axis=0)\n",
+        "    known_features[name] = avg_feature"
       ],
       "metadata": {
         "id": "VyTPTdUdX_WV"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -211,7 +215,7 @@
       "metadata": {
         "id": "K3HRmiFJX_UO"
       },
-      "execution_count": 16,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -251,7 +255,7 @@
       "metadata": {
         "id": "JmAxc2c0b2Wt"
       },
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -278,16 +282,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g5FNxvDuX_R3",
-        "outputId": "1b9ccc24-4223-448a-cc8c-3c07d9c34a4c"
+        "outputId": "1ae54714-3a49-4c7f-e613-bab240d6004c"
       },
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "The test image is recognized as: akhavan\n",
-            "NormL2 Distance: 0.7668439840517463, Cosine Similarity: 0.705975062572179\n"
+            "NormL2 Distance: 0.7668440186458264, Cosine Similarity: 0.705975060599485\n"
           ]
         }
       ]
